// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaCheckbox default 1`] = `
<div class="va-checkbox">
  <div class="va-checkbox__input-container">
    <div class="va-checkbox__square"><input readonly="readonly" class="va-checkbox__input">
      <va-icon-stub name="va-checkbox__icon-selected,ion ion-md-checkmark"></va-icon-stub>
    </div>
    <div class="va-checkbox__label-text">

    </div>
  </div>
  <va-message-list-stub color="danger" value="" limit="1" class="va-checkbox__error-message-container"></va-message-list-stub>
</div>
`;

exports[`VaCheckbox true value 1`] = `
<div class="va-checkbox va-checkbox--selected">
  <div class="va-checkbox__input-container">
    <div class="va-checkbox__square active"><input readonly="readonly" class="va-checkbox__input" style="background: rgb(64, 229, 131);">
      <va-icon-stub name="va-checkbox__icon-selected,ion ion-md-checkmark"></va-icon-stub>
    </div>
    <div class="va-checkbox__label-text">

    </div>
  </div>
  <va-message-list-stub color="danger" value="" limit="1" class="va-checkbox__error-message-container"></va-message-list-stub>
</div>
`;
